compares/ApplicationStudy/E0_baseline/results_metrics/c/noodles_vcf/mutants.out/log/src__record.rs_line_115_col_9_001.log

*** src/record.rs:115:9: replace <impl crate::variant::Record for Record>::variant_start -> Option<io::Result<Position>> with Some(Ok(Default::default()))

*** mutation diff:
--- src/record.rs
+++ replace <impl crate::variant::Record for Record>::variant_start -> Option<io::Result<Position>> with Some(Ok(Default::default()))
@@ -107,17 +107,17 @@
 }
 
 impl crate::variant::Record for Record {
     fn reference_sequence_name<'a, 'h: 'a>(&'a self, _: &'h Header) -> io::Result<&'a str> {
         Ok(self.reference_sequence_name())
     }
 
     fn variant_start(&self) -> Option<io::Result<Position>> {
-        self.variant_start()
+        Some(Ok(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     fn ids(&self) -> Box<dyn crate::variant::record::Ids + '_> {
         Box::new(self.ids())
     }
 
     fn reference_bases(&self) -> Box<dyn crate::variant::record::ReferenceBases + '_> {
         Box::new(self.reference_bases())


*** /root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=noodles-vcf@0.70.0
       Fresh adler2 v2.0.0
       Fresh cfg-if v1.0.0
       Fresh miniz_oxide v0.8.2
       Fresh crossbeam-utils v0.8.21
       Fresh memchr v2.7.4
       Fresh unicode-ident v1.0.14
       Fresh equivalent v1.0.1
       Fresh hashbrown v0.15.2
       Fresh bytes v1.9.0
       Fresh byteorder v1.5.0
       Fresh bit-vec v0.8.0
       Fresh percent-encoding v2.3.1
       Fresh pin-project-lite v0.2.15
       Fresh crc32fast v1.4.2
       Fresh bstr v1.11.1
       Fresh crossbeam-channel v0.5.14
       Fresh indexmap v2.7.0
       Fresh flate2 v1.0.35
       Fresh proc-macro2 v1.0.92
       Fresh noodles-core v0.15.0
       Fresh noodles-bgzf v0.34.0
       Fresh quote v1.0.37
       Fresh syn v2.0.90
       Fresh noodles-csi v0.41.0
       Fresh tokio-macros v2.4.0
       Fresh noodles-tabix v0.47.0
       Fresh tokio v1.42.0
       Dirty noodles-vcf v0.70.0 (/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp): the file `src/record.rs` has changed (1777999108.423554191s, 3s after last build at 1777999105.629479077s)
   Compiling noodles-vcf v0.70.0 (/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp)
     Running `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name noodles_vcf --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("async"))' -C metadata=ce80f1facd87980e -C extra-filename=-c25326ed8f560d15 --out-dir /tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps --extern indexmap=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libindexmap-ef9b859f7cba9871.rlib --extern memchr=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libmemchr-dcc0c986b403e508.rlib --extern noodles_bgzf=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_bgzf-d413ea864f6595f8.rlib --extern noodles_core=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_core-c76460cdfa09c24f.rlib --extern noodles_csi=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_csi-120d63f4c0bd19f8.rlib --extern noodles_tabix=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_tabix-662e4c05c03fbdfc.rlib --extern percent_encoding=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libpercent_encoding-2490259065368812.rlib --extern tokio=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libtokio-da68203304847442.rlib`
     Running `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name noodles_vcf --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("async"))' -C metadata=e6456573256cb532 -C extra-filename=-846f3f957bfab11c --out-dir /tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps --extern indexmap=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libindexmap-ef9b859f7cba9871.rmeta --extern memchr=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libmemchr-dcc0c986b403e508.rmeta --extern noodles_bgzf=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_bgzf-d413ea864f6595f8.rmeta --extern noodles_core=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_core-c76460cdfa09c24f.rmeta --extern noodles_csi=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_csi-120d63f4c0bd19f8.rmeta --extern noodles_tabix=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_tabix-662e4c05c03fbdfc.rmeta --extern percent_encoding=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libpercent_encoding-2490259065368812.rmeta`
error[E0277]: the trait bound `Position: Default` is not satisfied
   --> src/record.rs:115:17
    |
115 |         Some(Ok(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                 ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Position`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `noodles-vcf` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name noodles_vcf --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("async"))' -C metadata=e6456573256cb532 -C extra-filename=-846f3f957bfab11c --out-dir /tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps --extern indexmap=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libindexmap-ef9b859f7cba9871.rmeta --extern memchr=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libmemchr-dcc0c986b403e508.rmeta --extern noodles_bgzf=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_bgzf-d413ea864f6595f8.rmeta --extern noodles_core=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_core-c76460cdfa09c24f.rmeta --extern noodles_csi=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_csi-120d63f4c0bd19f8.rmeta --extern noodles_tabix=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_tabix-662e4c05c03fbdfc.rmeta --extern percent_encoding=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libpercent_encoding-2490259065368812.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `noodles_core::Position: Default` is not satisfied
   --> src/record.rs:115:17
    |
115 |         Some(Ok(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                 ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `noodles_core::Position`

error: could not compile `noodles-vcf` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name noodles_vcf --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("async"))' -C metadata=ce80f1facd87980e -C extra-filename=-c25326ed8f560d15 --out-dir /tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps --extern indexmap=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libindexmap-ef9b859f7cba9871.rlib --extern memchr=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libmemchr-dcc0c986b403e508.rlib --extern noodles_bgzf=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_bgzf-d413ea864f6595f8.rlib --extern noodles_core=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_core-c76460cdfa09c24f.rlib --extern noodles_csi=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_csi-120d63f4c0bd19f8.rlib --extern noodles_tabix=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libnoodles_tabix-662e4c05c03fbdfc.rlib --extern percent_encoding=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libpercent_encoding-2490259065368812.rlib --extern tokio=/tmp/cargo-mutants-noodles-vcf-0.70-src-cXXlu2.tmp/target/debug/deps/libtokio-da68203304847442.rlib` (exit status: 1)

*** result: Failure(101)
